# rootlyze

./: CMakeLists.txt  Contributing.md  LICENSE.md  README.md
include/: process.hpp  server.hpp
src/: main.cpp
src/ingestion/: server.cpp
src/processing/: process.cpp
